--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
 }
 
 @theme {
-    --color-yellow: #e7d393;
-    --color-white-100: #efefef;
+    --color-yellow: black;
+    --color-white-100: black;
     --font-sans: "Mona Sans", sans-serif;
     --font-modern-negra: "Modern Negra", sans-serif;
     --font-serif: "DM Serif Text", serif;
@@ -18,8 +18,8 @@
 html,
 body {
     width: 100%;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color:darkmagenta;
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
@@ -37,7 +37,7 @@ body {
 }
 
 @utility text-gradient {
-    background: linear-gradient(to bottom, #ffffff, #898989);
+    background: linear-gradient(to bottom, darkmagenta, #898989);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
@@ -66,6 +66,10 @@ body {
 
     nav {
         @apply fixed z-50 w-full;
+        backdrop-filter: blur(0px);
+        -webkit-backdrop-filter: blur(0px);
+        background-color: rgba(0,0,0,0);
+        transition: background-color 0.3s, backdrop-filter 0.3s, -webkit-backdrop-filter 0.3s;
 
         div {
             @apply flex md:flex-row flex-col md:justify-between items-center gap-5 py-5 lg:px-0 px-5 container mx-auto;
